Sat Feb  9 23:17:53 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am: seems some version of automake didn't
	  generate the dependancies right as Jacob found out. Add
	  an extra dependancy rule.

Sat Feb  9 19:04:01 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt.spec.in python/Makefile.am python/generator.py
	  python/libxsl.py python/libxslt.c python/tests/Makefile.am:
	  Fixed the python Makefiles, corrected a bug showing up on ia64,
	  changed the name of the python internal module too

Fri Feb  8 17:01:10 CET 2002 Daniel Veillard <daniel@veillard.com>

	* Copyright Makefile.am configure.in libxslt.spec.in: change the
	  Licence to MIT Licence and release of 1.0.11
	* doc/FAQ.html doc/intro.html doc/libxslt-decl.txt doc/news.html 
	  doc/xslt.html: updates of the docs accordingly
	* libxslt/xsltwin32config.h: numbering
	* python/generator.py python/libxml_wrap.h python/libxsltclass.txt
	  python/libxslt-python-api.xml: cleanup the dependancies with
	  libxml2
	* python/tests/extfunc.py: updated examples.

Thu Feb  7 23:21:18 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/libxslt-api.xml doc/libxslt-decl.txt doc/libxslt-refs.xml
	  doc/parsedecl.py: fixup the script and rebuid the API
	* libxslt/extensions.h: cleanup
	* python/generator.py python/libxslt-python-api.xml python/libxslt.c
	  python/libxsltclass.txt: provided accessors for a lot of the
	  tructures involved in the transformation. Stylesheet and
	  transformation python object don't free automatically the
	  encapsulated object when deallocated.
	* python/tests/Makefile.am python/tests/basic.py
	  python/tests/extfunc.py python/tests/pyxsltproc.py:
	  updated the examples

Thu Feb  7 17:59:27 CET 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: small fix
	* Makefile.am: cleanup
	* python/tests/Makefile.am: avoid a problem with $(TESTS)
	* python/generator.py python/libxml_wrap.h python/libxsl.py